# GRPC_RawHit_Readout_Analyse

./: CMakeLists.txt  README.md
ConcreteExperiments/: CMakeLists.txt
ConcreteExperiments/ElogExtract/GIF_October2016/: GIF_elog_export.csv  M3_elog_export.csv
ConcreteExperiments/ElogExtract/SPS_September2018/: M3_elog_export.csv
ConcreteExperiments/include/: ConcreteExperimentalSetup.h  RawHit_SDHCAL_Data_Reader_BIFtrigger_GIFoct2016.h  RawHit_SDHCAL_Data_Reader_tracker_GIFoct2016.h
ConcreteExperiments/src/: CMakeLists.txt  ConcreteExperimentalSetup.cpp  Config_SPS_Sept2018.cpp  RawHit_SDHCAL_Data_Reader_BIFtrigger_GIFoct2016.cpp  RawHit_SDHCAL_Data_Reader_tracker_GIFoct2016.cpp
DataListeners/: CMakeLists.txt
DataListeners/include/: BIF_Data_Listener.h  CMSTree_Writer.h  CMSTree_Writer_NoBIF.h  RawHit_Occupancy_Listener.h  RawHit_Plan_Cluster_Occupancy_Listener.h  RawHit_Plan_Occupancy_Listener.h  RawHit_TimePlot_Listener.h  Wrap_TimeCount_RawHit_SDHCAL_Data_Listener.h
DataListeners/src/: BIF_Data_Listener.cpp  CMSTree_Writer.cpp  CMSTree_Writer_NoBIF.cpp  CMakeLists.txt  RawHit_Occupancy_Listener.cpp  RawHit_Plan_Cluster_Occupancy_Listener.cpp  RawHit_Plan_Occupancy_Listener.cpp  RawHit_TimePlot_Listener.cpp  Wrap_TimeCount_RawHit_SDHCAL_Data_Listener.cpp
DataReaders/: CMakeLists.txt
DataReaders/include/: ASCIIpersistance.h  GG_counter.h  GG_counter_histos.h  GG_experimentalsetup_counters.h  GG_extended_counters.h  GG_messageCounter.h  RawHit_SDHCAL_Data_Concrete_Event_Filter.h  RawHit_SDHCAL_Data_Event_Filter.h  RawHit_SDHCAL_Data_Listener.h  RawHit_SDHCAL_Data_Reader.h  RawHit_SDHCAL_Data_Reader_Clusterer.h  RawHit_SDHCAL_Data_Reader_Event_Filter.h  RawHit_SDHCAL_Data_Reader_FromBIF.h  RawHit_SDHCAL_Data_Reader_FromClusters.h  RawHit_SDHCAL_Data_Reader_FromTimeAnalysis.h  RawHit_SDHCAL_Data_Reader_From_LCEvent.h  RawHit_SDHCAL_Data_Reader_HorizontalTrack.h  RawHit_SDHCAL_Data_Reader_Noise.h  RawHit_SDHCAL_Data_Reader_Threshold_Filter.h  RawHit_SDHCAL_Data_Reader_TriggeredMode.h  RawHit_SDHCAL_Data_Reader_Trivent.h  RawHit_horizontal_track_predicate.h  RawHit_standard_merge_predicate.h  Time_Decorator_For_RawHit_SDHCAL_Data_Listener.h
DataReaders/src/: CMakeLists.txt  GG_counter_histos.cpp  GG_experimentalsetup_counters.cpp  RawHit_SDHCAL_Data_Concrete_Event_Filter.cpp  RawHit_SDHCAL_Data_Reader_Clusterer.cpp  RawHit_SDHCAL_Data_Reader_Event_Filter.cpp  RawHit_SDHCAL_Data_Reader_FromBIF.cpp  RawHit_SDHCAL_Data_Reader_FromClusters.cpp  RawHit_SDHCAL_Data_Reader_FromTimeAnalysis.cpp  RawHit_SDHCAL_Data_Reader_From_LCEvent.cpp  RawHit_SDHCAL_Data_Reader_HorizontalTrack.cpp  RawHit_SDHCAL_Data_Reader_Noise.cpp  RawHit_SDHCAL_Data_Reader_Threshold_Filter.cpp  RawHit_SDHCAL_Data_Reader_TriggeredMode.cpp  RawHit_SDHCAL_Data_Reader_Trivent.cpp  RawHit_horizontal_track_predicate.cpp  RawHit_standard_merge_predicate.cpp  Time_Decorator_For_RawHit_SDHCAL_Data_Listener.cpp  test_GG_counter.cpp  test_RawHit_standard_merge_predicate.cpp
ExperimentalSetup/: CMakeLists.txt
ExperimentalSetup/include/: BifaceStripDevice.h  ConfigInfo.h  ConfigInfoExceptions.h  DIFdrivenDevice.h  ExperimentalSetup.h  PadDevice.h  Plane_position.h  RawCalorimeterHitPointerExperimentalSetupTools.h  TricotDevice.h
ExperimentalSetup/src/: BifaceStripDevice.cpp  CMakeLists.txt  ConfigInfo.cpp  ConfigInfoExceptions.cpp  ExperimentalSetup.cpp  PadDevice.cpp  Plane_position.cpp  TricotDevice.cpp  test_DIFdrivenDevice.cpp  test_ExperimentalSetup.cpp
LCWriterListeners/: CMakeLists.txt
LCWriterListeners/include/: RawHit_SDHCAL_Data_LCWriter.h  RawHit_SDHCAL_Data_LCWriter_CalorimeterHit.h  RawHit_SDHCAL_Data_LCWriter_RawCalorimeterHit.h
LCWriterListeners/src/: CMakeLists.txt  RawHit_SDHCAL_Data_LCWriter.cpp  RawHit_SDHCAL_Data_LCWriter_CalorimeterHit.cpp  RawHit_SDHCAL_Data_LCWriter_RawCalorimeterHit.cpp
Modules/: FindLCIO.cmake  FindSDHCAL_ILCCONFDB.cmake  ILC_SDHCAL_ConfDB_installer.sh
RawCalorimeterHitInterface/: CMakeLists.txt
RawCalorimeterHitInterface/include/: ASIC_Coordinate_Translator.h  Clustering.h  Clustering_bis.h  Mapping.h  RawCalorimeterHitClustering.h  RawCalorimeterHitPointer.h  RawCalorimeterHitPointerTools.h  RawCalorimeterHitUtilities.h  RawHit_SDHCAL_Data.h  TimeCounter.h  domain.h  intervalle.h
RawCalorimeterHitInterface/src/: CMakeLists.txt  RawCalorimeterHitClustering.cpp  RawCalorimeterHitUtilities.cpp  RawHit_SDHCAL_Data.cpp  TimeCounter.cpp  test_ASIC_Coordinate_Translator.cpp  test_RawCaloHitClustering.cpp  test_RawCaloHitTools.cpp  test_RawSDHCALData.cpp  test_domain.cpp
analysisResults/: GIF_october2016.tgz
binsrc/: CMSTree_Producer.cpp  CMakeLists.txt  dumpSetup.cpp
python/: Convert_904testbench_to_cmstree.py  Event_studies.py  InputOutputFileNames.py  basic_analysis_script.py  basic_analysis_script_root.py  cluster_test.py  debug_run_tree.py  event_display.py  example_analysis_script.py  noise_analysis_script.py  produce_october2016_GIF_plot.py  produce_october2016_GIF_plot_attscan.py  produce_october2016_GIF_plot_noise.py  produce_root_tree_for_ECAL_HCAL.py  produce_run_tree_GIF.py  produce_september_2022_runPlot.py  quick_analysis_tools.py  raw_analysis.py  run_trivent.py  track_test.py
root/: CMakeLists.txt  Linkdef.h
swig/: CMakeLists.txt  grpc.i
