FIND_PACKAGE(SWIG REQUIRED)
INCLUDE(${SWIG_USE_FILE})

FIND_PACKAGE(PythonLibs)
INCLUDE_DIRECTORIES(${PYTHON_INCLUDE_PATH})

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})

SET(CMAKE_SWIG_FLAGS "")

SET_SOURCE_FILES_PROPERTIES(grpc.i PROPERTIES CPLUSPLUS ON)
#SET_SOURCE_FILES_PROPERTIES(grpc.i PROPERTIES SWIG_FLAGS "-includeall")
SWIG_ADD_MODULE(grpc python grpc.i)
SWIG_LINK_LIBRARIES(grpc ${PYTHON_LIBRARIES} ${PROJECT_NAME} ${LCIO_LIBRARIES} ${ROOT_LIBRARIES})

install ( FILES ${CMAKE_BINARY_DIR}/swig/grpc.py ${CMAKE_BINARY_DIR}/swig/_grpc.so  DESTINATION lib)
